<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/static_stocks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/static_stocks_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/static_stock_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/static_stocks"/>
    <TextView
        android:id="@+id/increase_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/increase_percent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/static_stocks_button"/>
    <EditText
        android:id="@+id/increase_ed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="2"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/increase_tv"
        app:layout_constraintEnd_toEndOf="@id/increase_tv"/>
    <TextView
        android:id="@+id/variant_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/variant_percent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/increase_ed"/>
    <EditText
        android:id="@+id/variant_ed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="5"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/variant_tv"
        app:layout_constraintEnd_toEndOf="@id/variant_tv"/>
    <TextView
        android:id="@+id/inflate_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inflation_percent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/variant_ed"/>
    <EditText
        android:id="@+id/inflate_ed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="0"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inflate_tv"
        app:layout_constraintEnd_toEndOf="@id/inflate_tv"/>

    <TextView
        android:id="@+id/dynamic_stocks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inflate_ed"
        />

    <Button
        android:id="@+id/loggedIn"
        android:text="@string/log_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/loggedOut"
        android:text="@string/log_out_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>